--- a/style/safety.styl
+++ b/style/safety.styl
@@ -93,12 +93,9 @@ logo_width = 140px
 
 	li
 		border none
-		margin 0
 
 		li
 			@extend .light_grad
-			height 25px
-			line-height 25px
 
 			a
 				color black
@@ -116,6 +113,7 @@ logo_width = 140px
 
 	> li
 		margin 0 15px
+		width auto
 
 		> a
 			font-size:22px
